Update CORS configuration